name:                d12-hs-path
version:             0.1.0.0
synopsis:            Path helpers for my personal projects
description:         Please see README.org
homepage:            https://gitlab.com/d12frosted/d12-hs-path
license:             MIT
license-file:        LICENSE
author:              Boris Buliga
maintainer:          boris@d12frosted.io
copyright:           2016-2017 Boris Buliga
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Path.Parse
  build-depends:       base >= 4.7 && < 5
                     , env-extra == 1.0.0.0
                     , exceptions >= 0.8
                     , path >= 0.5
                     , text >= 1.0 && < 2.0
                     , transformers >= 0.5.2.0
                     , directory >= 1.2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://gitlab.com/d12frosted/d12-hs-path
